--- a/src/libslic3r/CMakeLists.txt
+++ b/src/libslic3r/CMakeLists.txt
@@ -222,6 +222,8 @@ target_link_libraries(libslic3r
     qhull
     semver
     TBB::tbb
+    OpenVDB::openvdb
+    Blosc::blosc
     ${CMAKE_DL_LIBS}
     )
 
